--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
     "@prisma/client": "5.9.1",
+    "apollo-server": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "signale": "^1.4.0",
