--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "@prisma/client": "5.9.1",
+    "@types/cors": "^2.8.17",
     "apollo-server": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.8.1",
