--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "module-alias": "^2.2.3",
     "signale": "^1.4.0",
     "socket.io": "^4.7.4",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0"
   },
   "scripts": {
-    "dev": "tsnd --respawn --clear src/index.ts"
+    "dev": "tsnd --respawn --clear -r tsconfig-paths/register src/index.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
