--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
+  "type": "module",
   "dependencies": {
-    "@apollo/server": "^4.10.0",
+    "@apollo/server": "^4.10.2",
+    "@graphql-tools/schema": "^10.0.3",
     "@prisma/client": "5.9.1",
     "@types/cors": "^2.8.17",
     "apollo-server": "^3.13.0",
@@ -10,20 +12,25 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.8.1",
+    "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "mqtt": "^5.5.0",
     "signale": "^1.4.0",
-    "socket.io": "^4.7.4",
+    "socket.io": "^4.7.5",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "ws": "^8.16.0"
   },
   "scripts": {
-    "dev": "tsnd --respawn --clear -r tsconfig-paths/register src/index.ts"
+    "dev": "bun --watch --clear src/index.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/mqtt": "^2.5.0",
+    "@types/node": "^20.12.4",
     "@types/signale": "^1.4.7",
     "@types/socket.io": "^3.0.2",
     "prisma": "^5.9.1"
