--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,33 @@
 {
   "compilerOptions": {
-    "target": "es2016",                                 
-    "experimentalDecorators": true,                 
-
-    "module": "commonjs",                           
+    "lib": [
+      "ESNext"
+    ],
+    "target": "ESNext",
+    "module": "ESNext",
     // "rootDir": "./",                                 
-    // "moduleResolution": "node10",                   
-    "baseUrl": ".",                                 
+    "moduleResolution": "bundler",
+    "allowJs": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
-    },                  
-    "outDir": "./",   
-    "esModuleInterop": true,                        
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "allowImportingTsExtensions": false,
+    "verbatimModuleSyntax": true,
+    "outDir": "./dist",
+    "rootDir": ".",
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-
-    "strict": true,                                  
-   
-    "skipLibCheck": true                                
+    "strict": true,
+    "skipLibCheck": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noPropertyAccessFromIndexSignature": false
   },
-  "exclude": ["node_modules" ]
+  "exclude": [
+    "node_modules"
+  ]
 }
