--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mqtt": "^5.5.0",
     "signale": "^1.4.0",
     "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "ws": "^8.16.0"
@@ -35,6 +36,7 @@
     "@types/node": "^20.12.4",
     "@types/signale": "^1.4.7",
     "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "prisma": "^5.9.1"
   },
   "_moduleAliases": {
